# assky

./: CMakeLists.txt  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  README.md  ShaderProgram.cpp  ShaderProgram.h  Texture.hpp  Vertex.cpp  Vertex.hpp  main.cpp  stb_image.cpp  stb_image.hpp
Shaders/: fragment_shader.glsl  lighting_vertex.glsl  model_fragment.glsl  model_vertex.glsl
assimp/: DartConfiguration.tcl  cmake_install.cmake
assimp-4.1.0/: CMakeCache.txt  Makefile  cmake_uninstall.cmake  revision.h
assimp-4.1.0/code/: Makefile
assimp-4.1.0/contrib/: cmake_install.cmake
assimp-4.1.0/test/headercheck/: CTestTestfile.cmake  Makefile
assimp-4.1.0/tools/assimp_cmd/: Makefile
assimp/code/: cmake_install.cmake
assimp/contrib/: Makefile
assimp/contrib/irrXML/: Makefile  cmake_install.cmake
assimp/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
assimp/test/headercheck/: cmake_install.cmake
assimp/tools/assimp_cmd/: cmake_install.cmake
